# New Features
Added the `character` search option to the `imdb_search` builder

# Defaults
Fixed incorrect content rating mappings in various Default files

# Bug Fixes
Fixed the `cast` search option for the `imdb_search` builder
Fixes #2258 `imdb_list` sort was not being parsed correctly
Fixes `letterboxd_list` rating filter to use a 1-10 rating vs 1-100 to reflect how letterboxd ratings work on their website