@@ -37,9 +37,10 @@ templates:
       final_tmdb_key:
         default: <<tmdb_key>>
         conditions:
-          - region: CA
+          - region: [CA, AU]
             tmdb_key: [9]
             value: 119
+
       discover_with:
         conditions:
           - originals_only: false
